# Makoto

./: .gitignore  CMakeLists.txt  EventSystem.cpp  LICENSE  README.md  Status.h  main.cpp
dependencies/sdl/: sdl2-config.cmake
src/: Subscriber.h
src/Events/: Event.h  EventSystem.h  EventType.h
